chore: JS -> TS

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>Snowpack - Simple Example</title>
   </head>
+
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/app.js"></script>
+
+    <script type="module" src="/dist/app.js"></script>
   </body>
 </html>
